[package]
name = "snapshotter"
description = "Generates a list of Pub Key Hashes from live delegators of a Cardano Stake Pool"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Souza"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockfrost = "0.2.1"
clap = { version = "4.3.19", features = ["derive"] }
pallas-addresses = "0.19.0-alpha.2"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
